--- a/html/admin/basic/new_post.html
+++ b/html/admin/basic/new_post.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+    <!--[if lt IE 9]><script src="/vendor/bower-asset/html5shiv/dist/html5shiv.min.js"></script><![endif]-->
 	<title>Новый пост</title>
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
-    <link type="text/css" rel="stylesheet" href="/html/css/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="/vendor/bower-asset/materialize/dist/css/materialize.min.css"  media="screen,projection"/>
     <link rel="stylesheet" type="text/css" href="/html/css/main.css"/>
     <link rel="stylesheet" type="text/css" href="/html/css/admin_style.css"/>
 </head>
