--- a/html/admin/basic/edit_project.html
+++ b/html/admin/basic/edit_project.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+    <!--[if lt IE 9]><script src="/vendor/bower-asset/html5shiv/dist/html5shiv.min.js"></script><![endif]-->
 	<title>Редактировать проект</title>
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
-    <link type="text/css" rel="stylesheet" href="/html/css/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="/vendor/bower-asset/materialize/dist/css/materialize.min.css"  media="screen,projection"/>
 
     <link rel="stylesheet" type="text/css" href="/html/css/main.css"/>
     <link rel="stylesheet" type="text/css" href="/html/css/admin_style.css"/>
@@ -121,15 +121,15 @@
         </div><!-- .wrapper -->
     </div>
 </body>
-<script src="/html/js/jquery-2.1.3.min.js"></script>
-<script type="text/javascript" src="/html/js/materialize.min.js"></script>
-<script src="/html/js/apply.ajax.min.js"></script>
-<link rel="stylesheet" href="/html/js/chosen/chosen.css">
-<script src="/html/js/chosen/chosen.jquery.min.js" defer></script>
+<script src="/vendor/bower-asset/jquery/dist/jquery.min.js"></script>
+<script src="/vendor/bower-asset/materialize/dist/js/materialize.min.js"></script>
+<script src="/vendor/avtomon/applyAjax.js/apply.ajax.min.js"></script>
+<link rel="stylesheet" href="/vendor/bower-asset/chosen/chosen.css">
+<script src="/vendor/bower-asset/chosen/chosen.jquery.js" defer></script>
 <script src="/html/js/auth.min.js"></script>
 <script src="/html/js/basic.min.js"></script>
-<script src="/html/js/jquery.myForm2.min.js" defer></script>
-<script src="/html/js/ckeditor/ckeditor.js"></script>
+<script src="/vendor/avtomon/myForm/myForm.min.js" defer></script>
+<script src="/vendor/bower-asset/ckeditor/ckeditor.js"></script>
 <script>
     $(function ()
     {
