--- a/html/admin/basic/new_post.html
+++ b/html/admin/basic/new_post.html
@@ -118,15 +118,15 @@
         </div><!-- .wrapper -->
     </div>
 </body>
-<script src="/html/js/jquery-2.1.3.min.js"></script>
-<script type="text/javascript" src="/html/js/materialize.min.js"></script>
-<script src="/html/js/apply.ajax.min.js"></script>
-<script src="/html/js/jquery.myForm2.min.js" defer></script>
-<link rel="stylesheet" href="/html/js/chosen/chosen.css">
-<script src="/html/js/chosen/chosen.jquery.min.js" defer></script>
+<script src="/vendor/bower-asset/jquery/dist/jquery.min.js"></script>
+<script src="/vendor/bower-asset/materialize/dist/js/materialize.min.js"></script>
+<script src="/vendor/avtomon/applyAjax.js/apply.ajax.min.js"></script>
+<link rel="stylesheet" href="/vendor/bower-asset/chosen/chosen.css">
+<script src="/vendor/bower-asset/chosen/chosen.jquery.js" defer></script>
 <script src="/html/js/auth.min.js"></script>
 <script src="/html/js/basic.min.js"></script>
-<script src="/html/js/ckeditor/ckeditor.js"></script>
+<script src="/vendor/avtomon/myForm/myForm.min.js" defer></script>
+<script src="/vendor/bower-asset/ckeditor/ckeditor.js"></script>
 <script>
     $(function ()
     {
